# ime-keys-for-us

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.en.md  README.md
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: pr-build.yml  release.yml
dist-diag-compare/: dynamic-runtime.wixpdb  static-runtime.wixpdb
dist-review/: IME-Keys-for-US-0.1.1-x64-review.wixpdb  IME-Keys-for-US-0.1.2-x64-review.wixpdb
dist-signed/: IME-Keys-for-US-0.1.3-x64.wixpdb
docs/: code-signing-policy.md  design.md  development.md  ime-control-strategy.md  ime-control.md  implementation-log.md  issues.md  keyboard-state-machine.md  manual-test-checklist.md  original-request.md  outlook-search-ime-experiments.md  pr-body.md  release-workflow.md  release.md  signing-and-uiaccess.md  signpath-application-notes.md  task.md  winget.md
installer/: README.md
installer/wix/: Product.wxs
packaging/: README.md
packaging/winget/: README.md
packaging/winget/tsuchim.ImeKeysForUS/: README.md
packaging/winget/tsuchim.ImeKeysForUS/0.1.0-template/: README.md  tsuchim.ImeKeysForUS.installer.yaml  tsuchim.ImeKeysForUS.locale.en-US.yaml  tsuchim.ImeKeysForUS.yaml
packaging/winget/tsuchim.ImeKeysForUS/template/: README.md  tsuchim.ImeKeysForUS.installer.yaml  tsuchim.ImeKeysForUS.locale.en-US.yaml  tsuchim.ImeKeysForUS.yaml
scripts/: Get-MsiMetadata.ps1  Test-Installer.ps1  Test-ReleasePreflight.ps1  Test-StartupRegistration.ps1
src/: app-uiaccess.manifest  app-uiaccess.manifest.in  app.cpp  app.h  app.manifest  app.manifest.in  app.rc  app_messages.h  diagnostics.cpp  diagnostics.h  ime_controller.cpp  ime_controller.h  keyboard_hook.cpp  keyboard_hook.h  main.cpp  resource.h  settings.cpp  settings.h  single_instance.cpp  single_instance.h  startup_registration.cpp  startup_registration.h  synthetic_input_guard.cpp  synthetic_input_guard.h  tray_icon.cpp  tray_icon.h
